# cpptopywrapper

./: .gitmodules  BoundingBoxes.py  README.md  inference.py  requirements.txt
nanodet_openvino/: CMakeLists.txt  setup.py
nanodet_openvino/src/: main.cpp
nanodet_openvino/tests/: test_basic.py
